--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pureimage": "^0.4.18",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-ros2djs": "^0.0.1",
